--- a/app/index.html
+++ b/app/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head lang="en">
-  <meta charset="UTF-8">
-  <title ng-bind="pageTitle"></title>
-  <!-- build:css styles/main.css -->
-  <!-- bower:css -->
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-  <!-- endbower -->
-  <link rel="stylesheet" href="styles/css/main.css"/>
-  <!-- endbuild -->
+    <meta charset="UTF-8">
+    <title ng-bind="pageTitle"></title>
+    <!-- build:css styles/main.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <!-- endbower -->
+    <link rel="stylesheet" href="styles/css/main.css"/>
+    <!-- endbuild -->
 </head>
 
-  <body class="container">
-    <h3> ngSuper Generator </h3>
-    <div ui-view></div>
-  </body>
+<body class="container">
 
-  <!-- build:js scripts/app.js -->
-  <!-- bower:js -->
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="bower_components/lodash/dist/lodash.compat.js"></script>
-  <script src="bower_components/restangular/dist/restangular.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <!-- endbower -->
-  <script src="src/core/core.module.js"></script>
-  <script src="src/common/common.module.js"></script>
-  <script src="src/app.module.js"></script>
-  <script src="src/core/restangular.config.js"></script>
-  <script src="src/core/router.config.js"></script>
-  <script src="src/core/httpStatus.constant.js"></script>
-  <script src="src/welcome/welcome.module.js"></script>
-  <script src="src/welcome/welcome.controller.js"></script>
-  <!-- endbuild -->
+<div ui-view></div>
+</body>
+
+<!-- build:js scripts/app.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="bower_components/lodash/dist/lodash.compat.js"></script>
+<script src="bower_components/restangular/dist/restangular.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<!-- endbower -->
+<script src="src/core/core.module.js"></script>
+<script src="src/common/common.module.js"></script>
+<script src="src/app.module.js"></script>
+<script src="src/core/restangular.config.js"></script>
+<script src="src/core/router.config.js"></script>
+<script src="src/core/httpStatus.constant.js"></script>
+<script src="src/welcome/welcome.module.js"></script>
+<script src="src/welcome/welcome.controller.js"></script>
+<script src="src/common/dataService.factory.js"></script>
+<script src="src/characters/characters.module.js"></script>
+<script src="src/characters/detail.controller.js"></script>
+<script src="src/characters/list.controller.js"></script>
+<script src="http://crypto-js.googlecode.com/svn/tags/3.0.2/build/rollups/md5.js"></script>
+
+<!-- endbuild -->
 
 </html>
